--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,10 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        
+        
+        // Add this line for Firebase
+        classpath("com.google.gms:google-services:4.3.15") // Use the latest stable version
     }
 }
 
