--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/analytics": "^20.4.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-firebase/storage": "^20.4.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-grid-component": "^2.0.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
